[package]
name = "lipsum-cli"
version = "0.2.1"
edition = "2021"
authors = ["Civan Yavuzsen <civanyavuzsen@gmail.com>"]
description = """
Terminal application for generating lipsum text.
Default usage will generate a string like `Grate Meminit et Praesentibus` using `Liber Primus`
which should be suitable for use in a document title.
"""
license = "MIT"

[dependencies]
atty = "0.2"
clap = { version = "4.1.6", features = ["derive"] }
lipsum = "0.8"

[dev-dependencies]
version-sync = "0.9"