[package]
name = "lipsum-cli"
version = "0.3.0"
edition = "2021"
authors = ["Civan Yavuzsen <civanyavuzsen@gmail.com>"]
description = """
Terminal application for generating lipsum text.
Default usage will generate a string like `Grate Meminit et Praesentibus` using `Liber Primus`
which should be suitable for use in a document title.
"""
license = "MIT"
categories = ["command-line-interface"]
keywords = [
    "cli",
    "lorem-ipsum",
    "lorem",
    "random",
    "lipsum",
]
repository = "https://github.com/xlith/lipsum-cli"
homepage = "https://github.com/xlith/lipsum-cli"
documentation = "https://docs.rs/crate/lipsum-cli/latest"
exclude = ["/tests", "/.github"]

[dependencies]
atty = "0.2"
clap = { version = "4.1.6", features = ["derive"] }
lipsum = "0.8"

[dev-dependencies]
version-sync = "0.9"